# SolitaireProject

./: AutomatedGame.cpp  AutomatedGame.h  Board.cpp  Board.h  BoardConfig.h  CMakeLists.txt  Cell.h  DiamondBoard.cpp  DiamondBoard.h  EnglishBoard.cpp  EnglishBoard.h  Game.cpp  Game.h  GameFactory.cpp  GameFactory.h  GameOverUI.cpp  GameOverUI.h  GameState.cpp  GameState.h  HexagonBoard.cpp  HexagonBoard.h  ManualGame.cpp  ManualGame.h  MoveValidator.cpp  MoveValidator.h  Popup.cpp  Popup.h  RadioButton.h  SetupPopup.cpp  SetupPopup.h  main.cpp  practice_gui.cpp
tests/: BoardConfigTests.cpp  BoardTests.cpp  GameStateTests.cpp  MoveValidatorTests.cpp  test_main.cpp
